Tambah custom tabs :ok:

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -35,3 +35,26 @@ hr {
 .relative{
     position: relative;
 }
+
+.height-sidenav{
+    height: 500px;
+    overflow-x: visible;
+    box-shadow: 0 !important;
+}
+
+.mr-6{
+    margin-left:230px;
+    margin-top: 100px;
+}
+
+.box{
+	background-color: white;
+	margin-top: 15px;
+	padding: 1rem;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.nav-link.box.active{
+    background-color: red;
+    color: white
+}
