--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -312,4 +312,21 @@ a.pagination-link{
 .align-self-center{
     align-self: center;
 }
+.card-reveal{
+    padding: 20px;
+    position: absolute;
+    background-color: #FFF;
+    width: 100%;
+    overflow-y: auto;
+    /*top: 0;*/
+    left:0;
+    bottom:0;
+    height: 100%;
+    z-index: 1;
+    display: none;
+}
+.card-reveal p{
+    color: rgba(0, 0, 0, 0.71);
+    margin:20px ;
+}
 /* --- END --- */
